11021
Probably obvious to the participants in this thread, but the first error message here is misleading (or wrong).
{code}
scala> :pa
// Entering paste mode (ctrl-D to finish)

trait X { private def f = 1 }
object X { def test = (new X {}).f == 1 }

// Exiting paste mode, now interpreting.

<console>:10: error: value f is not a member of X
       object X { def test = (new X {}).f == 1 }
                                        ^

scala> :pa
// Entering paste mode (ctrl-D to finish)

trait X { private def f = 1 }
object X { def test = (new X {}: X).f == 1 }

// Exiting paste mode, now interpreting.

defined trait X
defined object X

scala> :pa
// Entering paste mode (ctrl-D to finish)

trait S { private def f = 1 }
object S extends S { def test = (this: S).f == 1 }

// Exiting paste mode, now interpreting.

defined trait S
defined object S
{code}
